# react-native-get-random-values

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RNSodium.podspec  package.json  react-native-get-random-values.podspec  tsconfig.json
.github/workflows/: build-example-app.yml  ci.yml  publish.yml
Clibsodium.xcframework/: Info.plist
Clibsodium.xcframework/xros-arm64-simulator/Headers/sodium/: version.h
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml  cpp-adapter.cpp
android/src/main/java/com/getrandomvalues/: GetRandomValuesModule.java  GetRandomValuesPackage.java
android/src/main/java/com/sodium/: SodiumPackage.java
cpp/: GetRandomValuesHostObject.cpp  GetRandomValuesHostObject.hpp  Sodium.cpp  Sodium.hpp  TypedArray.cpp  TypedArray.hpp  react-native-get-random-values.cpp  react-native-get-random-values.h  utils.cpp  utils.hpp
docs/: getting-started.md
example/: app.json  babel.config.js  index.d.ts  index.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/getrandomvaluesexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/GetRandomValuesExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/GetRandomValuesExample.xcodeproj/: project.pbxproj
example/ios/GetRandomValuesExample.xcodeproj/xcshareddata/xcschemes/: GetRandomValuesExample.xcscheme
example/ios/GetRandomValuesExample.xcworkspace/: contents.xcworkspacedata
example/ios/GetRandomValuesExampleTests/: GetRandomValuesExampleTests.m
example/src/: App.tsx
example/src/components/: Benchmark.tsx  CustomNavigationBar.tsx  Percentage.tsx
example/src/constants/: theme.ts
example/src/routers/: BottomTabNavigator.tsx  RootStackNavigator.tsx  Router.tsx
example/src/screens/: B64.tsx  JSI.tsx  Results.tsx
example/src/stores/: Benchmarks.ts
example/src/styles/: common.ts
example/src/types/navigation/: BottomTabParamList.ts  RootStackParamList.ts
example/src/utils/: benchmarks.ts  time.ts  zustand.ts
ios/: GetRandomValues.h  GetRandomValues.mm  Sodium.mm
libsodium-android/arm64-v8a/lib/: libsodium.la
libsodium-android/arm64-v8a/lib/pkgconfig/: libsodium.pc
libsodium-android/armeabi-v7a/lib/: libsodium.la
libsodium-android/armeabi-v7a/lib/pkgconfig/: libsodium.pc
libsodium-android/x86/lib/: libsodium.la
libsodium-android/x86/lib/pkgconfig/: libsodium.pc
libsodium-android/x86_64/lib/: libsodium.la
libsodium-android/x86_64/lib/pkgconfig/: libsodium.pc
src/: NativeGetRandomValues.ts  index.ts  index.tsx
